--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import json\n",
@@ -76,8 +76,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T17:37:47.778420Z",
-     "start_time": "2023-07-28T17:37:41.749675Z"
+     "end_time": "2023-07-28T17:46:13.999841Z",
+     "start_time": "2023-07-28T17:46:07.507528Z"
     }
    }
   },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -105,7 +105,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>16107.842396</td>\n      <td>16.537147</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.020934</td>\n      <td>15380.812700</td>\n      <td>15.790740</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.50</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.219768</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.75</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>8405.321604</td>\n      <td>8.629339</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.480037</td>\n      <td>7036.640490</td>\n      <td>7.224180</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5681.198409</td>\n      <td>5.832613</td>\n      <td>1.75</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>4222.778911</td>\n      <td>4.335324</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>3530.327596</td>\n      <td>3.624417</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>3267.228384</td>\n      <td>3.354306</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>2838.829718</td>\n      <td>2.914490</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>1711.819792</td>\n      <td>1.757443</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.219768</td>\n      <td>16776.892895</td>\n      <td>17.224029</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.020934</td>\n      <td>14189.392355</td>\n      <td>14.567566</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>13792.354499</td>\n      <td>14.159947</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.50</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>7535.843868</td>\n      <td>7.736688</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.480037</td>\n      <td>6621.729531</td>\n      <td>6.798211</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5200.385743</td>\n      <td>5.338986</td>\n      <td>1.75</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>3759.065176</td>\n      <td>3.859251</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>3000.257779</td>\n      <td>3.080220</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>2976.819767</td>\n      <td>3.056158</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>2514.665606</td>\n      <td>2.581686</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>1555.792782</td>\n      <td>1.597258</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -184,8 +184,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T17:37:47.809207Z",
-     "start_time": "2023-07-28T17:37:47.788462Z"
+     "end_time": "2023-07-28T17:46:14.024887Z",
+     "start_time": "2023-07-28T17:46:14.018049Z"
     }
    }
   },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# Export to json\n",
@@ -210,8 +210,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T17:37:47.809420Z",
-     "start_time": "2023-07-28T17:37:47.791911Z"
+     "end_time": "2023-07-28T17:46:14.028793Z",
+     "start_time": "2023-07-28T17:46:14.022497Z"
     }
    }
   }
