feat: first attempts to incorporate dynamic boost

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Pre-collect all the data in this cell"
+    "## Fetch pool snapshots from balancer subgraph"
    ],
    "metadata": {
     "collapsed": false
@@ -11,15 +11,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 99,
    "outputs": [],
    "source": [
+    "# Query:\n",
+    "POOLS_SNAPSHOTS_QUERY = \"\"\"\n",
+    "{{\n",
+    "  poolSnapshots(\n",
+    "    first: {first}\n",
+    "    skip: {skip}\n",
+    "    orderBy: timestamp\n",
+    "    orderDirection: asc\n",
+    "    where: {{timestamp_gte: {start_ts}, timestamp_lt: {end_ts}}}\n",
+    "  ) {{\n",
+    "    pool {{\n",
+    "      address\n",
+    "      id\n",
+    "      symbol\n",
+    "    }}\n",
+    "    timestamp\n",
+    "    protocolFee\n",
+    "    swapFees\n",
+    "    swapVolume\n",
+    "    liquidity\n",
+    "  }}\n",
+    "}}\n",
+    "\"\"\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-01T16:22:48.310505Z",
+     "start_time": "2023-08-01T16:22:48.299589Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta\n",
+    "from datetime import datetime\n",
     "import json\n",
+    "from typing import Dict\n",
+    "from typing import List\n",
+    "from typing import Optional\n",
+    "\n",
+    "from gql import Client\n",
+    "from gql import gql\n",
+    "from gql.transport.requests import RequestsHTTPTransport\n",
+    "\n",
+    "BALANCER_GRAPH_URL = \"https://api.thegraph.com/subgraphs/name/balancer-labs/balancer-v2\"\n",
+    "\n",
+    "# Start date and end date are the following: start date is always previous Thursday 00:00 UTC, end date is always this Thursday 00:00 UTC:\n",
+    "today = datetime.today()\n",
+    "# Calculate days until previous Thursday (0 = Monday, 3 = Thursday)\n",
+    "days_until_previous_thursday = (today.weekday() - 3) % 7\n",
+    "# Calculate start date by subtracting days_until_previous_thursday and setting time to 00:00\n",
+    "start_date = today - timedelta(days=days_until_previous_thursday, hours=today.hour, minutes=today.minute, seconds=today.second, microseconds=today.microsecond)\n",
+    "# Calculate end date by adding 7 days to the start date\n",
+    "end_date = start_date + timedelta(days=7)\n",
+    "\n",
+    "start_ts = int(start_date.timestamp())\n",
+    "end_ts = int(end_date.timestamp())\n",
+    "\n",
+    "# Fetch all the data from the balancer subgraph\n",
+    "def make_gql_client(url: str) -> Optional[Client]:\n",
+    "    transport = RequestsHTTPTransport(url=url, retries=3)\n",
+    "    return Client(\n",
+    "        transport=transport, fetch_schema_from_transport=True, execute_timeout=60\n",
+    "    )\n",
+    "\n",
+    "def get_balancer_pool_snapshots() -> Optional[List[Dict]]:\n",
+    "\n",
+    "    client = make_gql_client(BALANCER_GRAPH_URL)\n",
+    "    all_pools = []\n",
+    "    limit = 100\n",
+    "    offset = 0\n",
+    "    while True:\n",
+    "        result = client.execute(gql(POOLS_SNAPSHOTS_QUERY.format(first=limit, skip=offset, start_ts=start_ts, end_ts=end_ts)))\n",
+    "        all_pools.extend(result['poolSnapshots'])\n",
+    "        offset += limit\n",
+    "        if len(result['poolSnapshots']) < limit - 1:\n",
+    "            break\n",
+    "    return all_pools\n",
+    "\n",
+    "pool_snapshots = get_balancer_pool_snapshots()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-01T16:22:52.755415Z",
+     "start_time": "2023-08-01T16:22:48.311568Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Calculate BAL emissions per week:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current BAL emissions per week: 121929.98021178861\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_year = 2023\n",
+    "emissions_per_week = 0\n",
+    "with open('../data/emissionsPerYear.json') as f:\n",
+    "    data = json.load(f)\n",
+    "for item in data['data']:\n",
+    "    if item['year'] == str(current_year):\n",
+    "        emissions_per_week = float(item['balPerWeek'])\n",
+    "        break\n",
+    "print(f'Current BAL emissions per week: {emissions_per_week}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-01T16:22:52.762220Z",
+     "start_time": "2023-08-01T16:22:52.759049Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Pre-process all the data in this cell"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "outputs": [],
+   "source": [
     "import os\n",
     "\n",
     "import requests\n",
     "from dotenv import load_dotenv\n",
     "from web3 import Web3\n",
+    "from pycoingecko import CoinGeckoAPI\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -35,6 +182,9 @@
     "\n",
     "web3 = Web3(Web3.HTTPProvider(os.environ[\"ETHNODEURL\"]))\n",
     "\n",
+    "# fetch balancer token usd price:\n",
+    "cg = CoinGeckoAPI()\n",
+    "bal_token_price = cg.get_price(ids='balancer', vs_currencies='usd')['balancer']['usd']\n",
     "# Fetch all voting gauges from github json\n",
     "voting_gauges_req = requests.get(\n",
     "    \"https://raw.githubusercontent.com/balancer/frontend-v2/master/src/data/voting-gauges.json\")\n",
@@ -50,7 +200,8 @@
     "        arb_gauges[gauge['address']] = {\n",
     "            'gaugeAddress': gauge['address'],\n",
     "            'pool': gauge['pool']['address'],\n",
-    "            'symbol': gauge['pool']['symbol']\n",
+    "            'symbol': gauge['pool']['symbol'],\n",
+    "            'id': gauge['pool']['id'],\n",
     "        }\n",
     "\n",
     "gauge_c_contract = web3.eth.contract(address=BALANCER_GAUGE_CONTROLLER_ADDR, abi=BALANCER_GAUGE_CONTROLLER_ABI)\n",
@@ -63,21 +214,51 @@
     "    for boost in boosties:\n",
     "        boost_data[boost['gaugeAddress']] = boost.get('fixedBoost', 1)\n",
     "        cap_override_data[boost['gaugeAddress']] = boost.get('capOverride', 10)\n",
-    "\n",
+    "pool_protocol_fees = {}\n",
+    "# Collect protocol fees from the pool snapshots:\n",
+    "# TODO: Doesn't work properly as there can be multiple snapshots per pool per week\n",
+    "for gauge_addr, gauge_data in arb_gauges.items():\n",
+    "    for pool_snapshot in pool_snapshots:\n",
+    "        if pool_snapshot['pool']['symbol'].lower() == gauge_data['symbol'].lower():\n",
+    "            pool_protocol_fees[gauge_addr] = float(pool_snapshot['protocolFee'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-01T16:22:52.854415Z",
+     "start_time": "2023-08-01T16:22:52.769429Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [],
+   "source": [
+    "# Apply boost data to arb gauges\n",
     "vote_weights = {}\n",
+    "combined_boost = {}\n",
     "# Collect gauge voting weights from the gauge controller on chain\n",
     "for gauge_addr, gauge_data in arb_gauges.items():\n",
     "    weight = gauge_c_contract.functions.gauge_relative_weight(gauge_addr).call() / 1e18 * 100\n",
-    "    # Boost weight if gauge is boosted, if not boosted, use 1 as multiplier (no boost)\n",
-    "    weight *= boost_data.get(gauge_addr, 1)\n",
+    "    # Calculate dynamic boost. Formula is `[Fees earned/value of bal emitted per pool + 1]`\n",
+    "    dollar_value_of_bal_emitted = weight * emissions_per_week * bal_token_price\n",
+    "    if dollar_value_of_bal_emitted != 0:\n",
+    "        dynamic_boost = (pool_protocol_fees.get(gauge_addr, 0) / dollar_value_of_bal_emitted) + 1\n",
+    "    else:\n",
+    "        dynamic_boost = 1\n",
+    "    # Now calculate the final boost value, which uses formula - (dynamic boost + fixed boost) - 1\n",
+    "    boost = (dynamic_boost + boost_data.get(gauge_addr, 1)) - 1\n",
+    "    combined_boost[gauge_addr] = boost\n",
+    "    weight *= boost\n",
     "    vote_weights[gauge_addr] = weight\n",
     "    arb_gauges[gauge_addr]['voteWeight'] = weight"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T17:46:13.999841Z",
-     "start_time": "2023-07-28T17:46:07.507528Z"
+     "end_time": "2023-08-01T16:22:59.815799Z",
+     "start_time": "2023-08-01T16:22:52.856790Z"
     }
    }
   },
@@ -92,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 104,
    "outputs": [
     {
      "name": "stdout",
@@ -105,7 +286,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.219768</td>\n      <td>16776.892895</td>\n      <td>17.224029</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.020934</td>\n      <td>14189.392355</td>\n      <td>14.567566</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>13792.354499</td>\n      <td>14.159947</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.50</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>7535.843868</td>\n      <td>7.736688</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.480037</td>\n      <td>6621.729531</td>\n      <td>6.798211</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5200.385743</td>\n      <td>5.338986</td>\n      <td>1.75</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>3759.065176</td>\n      <td>3.859251</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>3000.257779</td>\n      <td>3.080220</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>2976.819767</td>\n      <td>3.056158</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>2514.665606</td>\n      <td>2.581686</td>\n      <td>1.75</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>1555.792782</td>\n      <td>1.597258</td>\n      <td>1.00</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>distributionInPercent</th>\n      <th>boost</th>\n      <th>capOverride</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x9ab40B6e1330Ce70B9e07cD691f281c1539944E6</td>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.267735</td>\n      <td>17274.233568</td>\n      <td>17.734624</td>\n      <td>1.818818</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb12ADA23eE766bd6b596E2bE556ea2046758b87c</td>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.020934</td>\n      <td>14049.919742</td>\n      <td>14.424377</td>\n      <td>1.750000</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>0.966584</td>\n      <td>13635.807350</td>\n      <td>13.999227</td>\n      <td>1.750000</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>0.934983</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.500000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.796273</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.536536</td>\n      <td>7457.297218</td>\n      <td>7.656048</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x80aed5C5C683FEC86817C98da334DD72424E7297</td>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.490167</td>\n      <td>6697.817061</td>\n      <td>6.876326</td>\n      <td>1.786927</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xacE0D479040231e3c6b17479cFd4444182d521d4</td>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.373075</td>\n      <td>5148.418034</td>\n      <td>5.285633</td>\n      <td>1.750000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.266953</td>\n      <td>3719.332460</td>\n      <td>3.818460</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.209722</td>\n      <td>2965.748190</td>\n      <td>3.044791</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.213185</td>\n      <td>2946.782118</td>\n      <td>3.025319</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4944b07977A42C15c6a06CF4e204e24c60564104</td>\n      <td>0xCba9Ff45cfB9cE238AfDE32b0148Eb82CbE63562</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>0.178266</td>\n      <td>2487.831089</td>\n      <td>2.554136</td>\n      <td>1.750000</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.111315</td>\n      <td>1540.013171</td>\n      <td>1.581057</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -138,7 +319,7 @@
     "        'voteWeight': gauge_data['voteWeight'],\n",
     "        'distribution': to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr],\n",
     "        'distributionInPercent': to_distribute / ARBITRUM_TO_DISTRIBUTE * 100,\n",
-    "        'boost': boost_data.get(gauge_addr, 1),\n",
+    "        'boost': combined_boost.get(gauge_addr, 1),\n",
     "        'capOverride': f\"{cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT)}%\"\n",
     "    }\n",
     "\n",
@@ -184,8 +365,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T17:46:14.024887Z",
-     "start_time": "2023-07-28T17:46:14.018049Z"
+     "end_time": "2023-08-01T16:22:59.838836Z",
+     "start_time": "2023-08-01T16:22:59.828893Z"
     }
    }
   },
@@ -200,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "outputs": [],
    "source": [
     "# Export to json\n",
@@ -210,8 +391,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-28T17:46:14.028793Z",
-     "start_time": "2023-07-28T17:46:14.022497Z"
+     "end_time": "2023-08-01T16:22:59.858619Z",
+     "start_time": "2023-08-01T16:22:59.837234Z"
     }
    }
   }
